2007-03-18  Marzo Sette Torres Junior <marzojr@yahoo.com>
	New vga/usecode generation scripts for Keyring mod.

2007-03-21    <jeff@mini.nerble.net>

	* exult.cc: Fixed a couple bugs involving dragging NPC's onto the map.

2007-03-18  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* minsinf.cc: Made multiracial table patches actually be able to change
	  the built-in skins.
	* content/bgkeyring: changed storage method of graphics to shp files instead
	  of pngs and switched scripts to use expack instead of ipack. Added some
	  instructions on how to build the Keyring mod by yourself. Added several
	  new avatars to choose from, and improved existing ones. Removed generated
	  files (most vga files, the usecode file).

2007-01-15  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Don't print errors when looking for mods and the mods dir doesn't exist.

2007-01-10  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* A few bug fixes/improvements to the Keyring mod.

2007-01-06  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixing bug #1628256.

2007-01-02    <jeff@mini.nerble.net>

	* mapedit/ucbrowse.cc (Usecode_browser): Sort columns in usecode
	browser.

2006-12-25  Marzo Sette Torres Junior <marzojr@yahoo.com>
	A few fixes/updates to the Keyring mod.

2006-12-24  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* miscinf.cc: Removing unneeded debug message.
	* ucbrowse: Lack of std::ios::binary in opening file caused wrong usecode
	  symbol table. Changed to use U7open instead of constructor.

2006-12-23    <jeff@mini.nerble.net>

	* mapedit/shapeedit.cc: Added "Browse" buttons for usecode selection.

2006-12-20  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Increased version to 1.4.03CVS due to the enormous number of changes.
	* Added versioning information to the files loaded through Shapeinfo_lookup.
	* Added two new intrinsics: set_npc_name and set_usecode_fun, as well as
	  documentation for them.